test/resources/parser/passing/Literals.scala
object Literals {
  1; (); ( ); "Hello"; true
}
