test/resources/parser/failing/ExtCallError4.scala
object CallError {
  "abc"() // Literal + call!
}
